# backend/services/order/api/docs/swagger.yaml
@@ -1,9 +1,14 @@
 definitions:
   types.CreateReq:
     properties:
-      data:
-        description: 'TODO: 替換為實際新增欄位'
+      amount:
+        type: number
+      order_no:
         type: string
+      status:
+        type: string
+      user_id:
+        type: integer
     type: object
   types.Response:
     properties:
@@ -15,10 +20,15 @@ definitions:
     type: object
   types.UpdateReq:
     properties:
-      data:
-        description: 'TODO: 替換為實際更新欄位'
-        type: string
+      amount:
+        type: number
       id:
+        type: integer
+      order_no:
+        type: string
+      status:
+        type: string
+      user_id:
         type: integer
     type: object
   types.UpdateStatusReq:
